<resources>
    <string name="app_name">Dialer</string>
    <string name="settings">Settings</string>
    <string name="button">Button</string>
    <string name="call_list">Call list</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="dial">Dial</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="about_info">This app is supposed to mimic the keypad on a phone.
    The app will consist of activities to:\n\n- Enter numbers to dial\n- See previously dialed numbers\n- Change the keypad settings\n- Show on a Map where previous calls are dialed from
    </string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialer_title">1</string>
    <string name="dialer_message">ABC</string>
    <string name="about_toast">Hello you have already read this!</string>
    <string name="erase_button_information">This button will erase the number on the screen</string>
    <string name="dial_button_information">This button will dial to the number shown on the screen</string>
    <string name="text_settings">Settings</string>
    <string name="no_numbers_stored">No telephone numbers are stored</string>
</resources>